Sitio versión inglés Contact

--- a/ng/contact.html
+++ b/ng/contact.html
@@ -493,23 +493,20 @@
             <ul>
               <li>
                 <h2 class="cursiveFont fontHover">Leave us a message:</h2>
-                <!--<span class="required_notification">* Denotes Required Field</span>-->
               </li>
               <li>
                 <label for="from_name" class="cursiveFont">Name:</label>
                 <input type="text" name="name" class="borde_r" placeholder="Name" id="from_name" required />
-                <!--<span class="fa valid-icon"></span>-->
               </li>
               <li>
                 <label for="from_email" class="cursiveFont">Email:</label>
                 <input type="email" name="email" placeholder="email@example.com" id="from_email" required />
                 <!--<span class="fa valid-icon"></span>-->
-                <span class="form_hint">Formato "email@domino.com"</span>
+                <span class="form_hint">Format "email@domino.com"</span>
               </li>
               <li>
                 <label for="from_message" class="cursiveFont">Message:</label>
                 <textarea name="message" cols="40" rows="6" required id="from_message"></textarea>
-                <!--<span class="fa valid-icon"></span>-->
                 <br>
                 <span id="response-mail" class="fontHover cursiveFont"> </span>
               </li>
