--- a/ng/contact.html
+++ b/ng/contact.html
@@ -308,7 +308,7 @@
               </div>
               <div id="faq_b2" class="collapse" aria-labelledby="faq_h2" data-parent="#accordionExample" aria-expanded="false">
                 <div class="card-body">
-                  We have a restaurant, cafeteria, room service, terrace and gym.
+                  We have a restaurant, coffee shop, room service, terrace and gym.
                 </div>
               </div>
             </div>
@@ -587,8 +587,8 @@
 </div>
 <!-- Javascripts -->
 <script src="js/jquery-2.1.4.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<!--<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>-->
 <script src="js/hoverIntent.js"></script>
 <script src="js/superfish.js"></script>
 <script src="js/bootstrap.min.js"></script>
