--- a/ng/cdmx.html
+++ b/ng/cdmx.html
@@ -269,7 +269,7 @@
                 <li class="nav-item"><a class="nav-link" href="#bellas_artes"><span>Bellas Artes</span></a></li>
                 <li class="nav-item"><a class="nav-link" href="#palacio_postal"><span>Palacio Postal</span></a></li>
                 <li class="nav-item"><a class="nav-link" href="#templo_mayor"><span>Templo Mayor</span></a></li>
-                <li class="nav-item"><a class="nav-link" href="#calle_madero"><span>C. Madero</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="#calle_madero"><span>Madero St.</span></a></li>
                 <li class="nav-item"><a class="nav-link" href="#chapultepec"><span>Chapultepec</span></a></li>
                 <li class="nav-item"><a class="nav-link" href="contact.html"><span>Contact</span></a></li>
             </ul>
