Sitio versión inglés CDMX

--- a/ng/cdmx.html
+++ b/ng/cdmx.html
@@ -375,7 +375,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12">
-                        <h1 class="titlePlace text-white"><span class="cursiveFont">Palace</span>Postcard</h1>
+                        <h1 class="titlePlace text-white"><span class="cursiveFont">Palacio</span>Postal</h1>
                         <p class="text-white font-weight-bold mb-0">Architectural work</p>
                         <ul class="text-white font-weight-bold">
                             <li>Built at the beginning of the 20th century</li>
