Agregando menu def de nov

--- a/restaurant.html
+++ b/restaurant.html
@@ -292,8 +292,8 @@
           <div class="col-md-4 col-md-offset-4">
             <div class="hotel-content1">
               <div class="desc" style="justify-content: center; text-align: center;">
-                <p><a href="./files/menus/110722_M_Restaurant.pdf" target="_blank" class="btn btn-primary btn-luxe-primary">Ver Menú <i class="ti-angle-right"></i></a></p>
-                <p><a href="./files/menus/110722_M_Bebidas.pdf" target="_blank" class="btn btn-primary btn-luxe-primary">Ver Bebidas<i class="ti-angle-right"></i></a></p>
+                <p><a href="./files/carta-qr_nov.pdf" target="_blank" class="btn btn-primary btn-luxe-primary">Ver Menú <i class="ti-angle-right"></i></a></p>
+                <!--<p><a href="./files/menus/110722_M_Bebidas.pdf" target="_blank" class="btn btn-primary btn-luxe-primary">Ver Bebidas<i class="ti-angle-right"></i></a></p>-->
               </div>
             </div>
           </div>
