--- a/index.html
+++ b/index.html
@@ -210,7 +210,46 @@
 </div>
 <!------------>
 <!-- Modal -->
-
+<div class="modal fade" id="myModalPromNov" tabindex="-1" role="dialog" aria-labelledby="promoNov" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle"></h5>
+        <div class="modal-body">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <!--<img src="./assets/proms/promo15S.jpeg" class="img-fluid" alt="Promoción 15 de Septiembre">-->
+          <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-interval="10000">
+                <img src="./assets/proms/nov/" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item" data-interval="2000">
+                <img src="..." class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="..." class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleInterval" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+        <!--<div class="modal-footer">
+        </div>-->
+      </div>
+    </div>
+  </div>
+</div>
 <!------------>
 <div id="fh5co-wrapper">
   <div id="fh5co-page">
@@ -337,7 +376,7 @@
     <div class="container">
       <div class="row">
         <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="mybtn-flotante text-rsv">Reserva aquí</a>
-        <a href="https://api.whatsapp.com/send/?phone=5618887875&text&app_absent=0" target="_blank" target="_blank" class="mywap-flotante text-rsv"><i class="fa-brands fa-whatsapp"></i></a>
+        <a href="https://api.whatsapp.com/send/?phone=5618887875&text&app_absent=0" target="_blank" class="mywap-flotante text-rsv"><i class="fa-brands fa-whatsapp"></i></a>
       </div>
     </div>
     <!--
