--- a/index.html
+++ b/index.html
@@ -225,13 +225,13 @@
           <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-interval="10000">
-                <img src="./assets/proms/nov/" class="d-block w-100" alt="...">
+                <img src="./assets/proms/nov/Img_Mundial.jpeg" class="d-block w-100" alt="Mundial en HotelPuntoMX">
               </div>
               <div class="carousel-item" data-interval="2000">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="./assets/proms/nov/promoBF1.jpeg" class="d-block w-100" alt="Buen fin en HotelPuntoMX">
               </div>
               <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="./assets/proms/nov/promoBF2.jpeg" class="d-block w-100" alt="Buen fin en HotelPuntoMX">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleInterval" role="button" data-slide="prev">
