Subiendo promos y correcciones

--- a/contact.html
+++ b/contact.html
@@ -429,8 +429,8 @@
               <div id="faq_b8" class="collapse" aria-labelledby="faq_h8" data-parent="#accordionExample">
                 <div class="card-body">
                   Si, tiene un cargo extra de $300.00MXN por noche.<br>
-                  Si son de servicio no tiene costo alguno, pero es necesario entregar los papeles donde validen que es de servicio.<br>
-                  Puede alejarse con su mascota solo en las siguientes categorías: Deluxe dos camas matrimoniales, Junior suite cama king size y Suite con vista.
+                  Si son de servicio no tiene costo alguno, pero es necesario entregar los documentos donde validen que es de servicio.<br>
+                  Puede alojarse con su mascota solo en las siguientes categorías: Deluxe dos camas matrimoniales, Junior suite cama king size y Suite con vista.
                 </div>
               </div>
             </div>
@@ -461,7 +461,7 @@
               </div>
               <div id="faq_b10" class="collapse" aria-labelledby="faq_h10" data-parent="#accordionExample">
                 <div class="card-body">
-                  De lunes a sábado de 7:00am a 12:00pm y los domingos de 8:00am a 12:00pm.
+                  De lunes a domingo de 7:00am a 12:00pm.
                 </div>
               </div>
             </div>
