--- a/ng/contact.html
+++ b/ng/contact.html
@@ -428,9 +428,9 @@
               </div>
               <div id="faq_b8" class="collapse" aria-labelledby="faq_h8" data-parent="#accordionExample">
                 <div class="card-body">
-                  Yes, it has an extra charge of $300.00MXN per night.<br>
-                  If they are of service there is no cost, but it is necessary to deliver the papers where they validate that it is of service.<br>
-                  You can go away with your pet only in the following categories: Deluxe with two double beds, Junior suite king size bed and Suite with view.
+                  Yes, there is an extra charge of $300.00MXN per night.<br>
+                  If they are service, there is no cost, but it is necessary to submit the documents that validate that they are service.<br>
+                  You can stay with your pet alone in the following categories: Deluxe two double beds, Junior suite king size bed and Suite with view.
                 </div>
               </div>
             </div>
@@ -461,7 +461,7 @@
               </div>
               <div id="faq_b10" class="collapse" aria-labelledby="faq_h10" data-parent="#accordionExample">
                 <div class="card-body">
-                  From Monday to Saturday from 7:00 a.m. to 12:00 p.m. and on Sundays from 8:00 a.m. to 12:00 p.m.
+                  From Monday to Sunday from 7:00 a.m. to 12:00 p.m.
                 </div>
               </div>
             </div>
