--- a/index.html
+++ b/index.html
@@ -41,6 +41,32 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="js/modernizr-2.6.2.min.js"></script>
   <!------------------------------------------------->
+  <style>
+    .gallery {
+      padding: 1rem;
+      display: grid;
+      grid-template-columns: repeat(3,35vw);
+      grid-template-rows: 1fr;
+      grid-column-gap: 1rem;
+      grid-row-gap: 1rem;
+      overflow: scroll;
+      height: 90vh;
+      scroll-snap-type: both mandatory;
+      scroll-padding: 1rem;
+    }
+
+    .active {
+      scroll-snap-type: unset;
+    }
+
+    .myli {
+      scroll-snap-align: start;
+      display: inline-block;
+      border-radius: 3px;
+      font-size: 0;
+    }
+  </style>
+  <!------------------------------------------------->
 </head>
 <body class="mybody">
 <!------ modals ------->
@@ -209,20 +235,8 @@
   </div>
 </div>
 <!------------>
-<!-- Modal -->
-<div class="modal fade" id="myModalPromNov" tabindex="-1" role="dialog" aria-labelledby="promoNov" aria-hidden="true">
-  <div class="modal-dialog modal-lg modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle"></h5>
-        <div class="modal-body">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <!--<img src="./assets/proms/promo15S.jpeg" class="img-fluid" alt="Promoción 15 de Septiembre">-->
-          <div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
+<!----
+<div id="carouselExampleInterval" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active" data-interval="10000">
                 <img src="./assets/proms/nov/Img_Mundial.jpeg" class="d-block w-100" alt="Mundial en HotelPuntoMX">
@@ -243,9 +257,27 @@
               <span class="sr-only">Next</span>
             </a>
           </div>
-        </div>
-        <!--<div class="modal-footer">
-        </div>-->
+--->
+<!-- Modal -->
+<div class="modal fade" id="modalNov" tabindex="-1" aria-labelledby="modalLabelNov" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <!--
+      <div class="modal-header">
+        <h5 class="modal-title" id="modalLabelNov">Promociones Noviembre</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      -->
+      <div class="modal-body">
+        <!------------------------------------------------------------------->
+        <ul class="gallery">
+          <li class="myli" style="background-image: url(./assets/proms/nov/Img_Mundial.jpeg); background-repeat: no-repeat; background-size: contain; background-position: center;"></li>
+          <li class="myli" style="background-image: url(./assets/proms/nov/promoBF1.jpeg);background-repeat: no-repeat; background-size: contain; background-position: center;"></li>
+          <li class="myli" style="background-image: url(./assets/proms/nov/promoBF2.jpeg);background-repeat: no-repeat; background-size: contain; background-position: center;"></li>
+        </ul>
+        <!------------------------------------------------------------------->
       </div>
     </div>
   </div>
@@ -871,6 +903,9 @@
 <!-- Javascripts -->
 <!--<script src="js/jquery-2.1.4.min.js"></script>-->
 <script src="js_t/jquery-1.11.3.min.js"></script>
+<!--<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>-->
+<!--<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>-->
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>-->
 <script src="js/hoverIntent.js"></script>
 <script src="js/superfish.js"></script>
 <script src="js/bootstrap.min.js"></script>
@@ -885,5 +920,37 @@
 <script src="js_t/jquery.singlePageNav.min.js"></script>
 <script src="js/jquery.flexslider-min.js"></script>
 <script src="js/custom.js"></script>
+<script>
+  $(document).ready(function() {
+    $('#modalNov').modal('show');
+  });
+  const slider = document.querySelector('.gallery');
+  let isDown = false;
+  let startX;
+  let scrollLeft;
+
+  slider.addEventListener('mousedown', e => {
+    isDown = true;
+    slider.classList.add('active');
+    startX = e.pageX - slider.offsetLeft;
+    scrollLeft = slider.scrollLeft;
+  });
+  slider.addEventListener('mouseleave', _ => {
+    isDown = false;
+    slider.classList.remove('active');
+  });
+  slider.addEventListener('mouseup', _ => {
+    isDown = false;
+    slider.classList.remove('active');
+  });
+  slider.addEventListener('mousemove', e => {
+    if (!isDown) return;
+    e.preventDefault();
+    const x = e.pageX - slider.offsetLeft;
+    const SCROLL_SPEED = 3;
+    const walk = (x - startX) * SCROLL_SPEED;
+    slider.scrollLeft = scrollLeft - walk;
+  });
+</script>
 </body>
 </html>
