--- a/index.html
+++ b/index.html
@@ -271,13 +271,14 @@
       </div>
       -->
       <div class="modal-body">
-        <!------------------------------------------------------------------->
+        <img src="./assets/proms/nov/Img_Mundial.jpeg" class="img-fluid" alt="Promoción Mundial QATAR">
+        <!-----------------------------------------------------------------
         <ul class="gallery">
           <li class="myli" style="background-image: url(./assets/proms/nov/Img_Mundial.jpeg); background-repeat: no-repeat; background-size: contain; background-position: center;"></li>
           <li class="myli" style="background-image: url(./assets/proms/nov/promoBF1.jpeg);background-repeat: no-repeat; background-size: contain; background-position: center;"></li>
           <li class="myli" style="background-image: url(./assets/proms/nov/promoBF2.jpeg);background-repeat: no-repeat; background-size: contain; background-position: center;"></li>
         </ul>
-        <!------------------------------------------------------------------->
+        ------------------------------------------------------------------>
       </div>
     </div>
   </div>
