--- a/tours.html
+++ b/tours.html
@@ -35,6 +35,21 @@
     <link rel="stylesheet" href="css/mybtn_flot.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="js/modernizr-2.6.2.min.js"></script>
+    <style>
+        .window_size{
+            height: 95vh!important;
+        }
+        @media screen and (max-width: 990px) {
+            .window_size{
+                height: 70vh!important;
+            }
+        }
+        @media screen and (max-width: 758px) {
+            .window_size{
+                height: 65vh!important;
+            }
+        }
+    </style>
 </head>
 <body class="mybody">
 <!------ modals ------->
@@ -228,7 +243,7 @@
                                 <li><a href="tours.html">Tours</a></li>
                                 <!--<li><a href="blog.html">Blog</a></li>-->
                                 <li><a href="contact.html">Contacto</a></li>
-                                <li><a href="./ng/roomservice.html" target="_self"><i class="fa-solid fa-flag-usa"></i>Eng</a></li>
+                                <li><a href="./ng/tours.html" target="_self"><i class="fa-solid fa-flag-usa"></i>Eng</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -236,7 +251,7 @@
             </header>
         </div>
         <!-- end:fh5co-header -->
-        <div class="fh5co-parallax" style="height: 95vh!important; background: linear-gradient( rgba(0, 0, 0, 0.7) 100%, rgba(0, 0, 0, 0.5)100%),url(./assets/webp/ROOM_SERVICE_2.jpeg); background-size: contain, cover; background-position: 0 bottom,right bottom!important; background-repeat: repeat,no-repeat;" data-stellar-background-ratio="0.5">
+        <div class="fh5co-parallax window_size" style="background: linear-gradient( rgba(0, 0, 0, 0.7) 100%, rgba(0, 0, 0, 0.5)100%),url(./assets/webp/Punto_MX-32.jpeg); background-size: contain, cover; background-position: 0 bottom,right bottom!important; background-repeat: repeat,no-repeat;" data-stellar-background-ratio="0.5">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row">
@@ -300,7 +315,7 @@
         </div>
         <div class="container">
             <div class="row">
-                <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="mybtn-flotante text-rsv">Reserva aquí</a>
+                <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="mybtn-flotante text-rsv">Reserva aquí</a>
                 <a href="https://api.whatsapp.com/send/?phone=5618887875&text&app_absent=0" target="_blank" class="mywap-flotante text-rsv"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
         </div>
