Actualizando menú Eng Version

--- a/ng/services.html
+++ b/ng/services.html
@@ -241,6 +241,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="cdmx.html">Meet CDMX</a></li>
+                                <li><a href="tours.html">Tours</a></li>
                                 <!--<li><a href="blog.html">Blog</a></li>-->
                                 <li><a href="contact.html">Contact</a></li>
                                 <li><a href="../services.html" target="_self">Esp</a></li>
