--- a/ng/cdmx.html
+++ b/ng/cdmx.html
@@ -232,6 +232,7 @@
                                     </ul>
                                 </li>
                                 <li><a class="active" href="cdmx.html">Meet CDMX</a></li>
+                                <li><a href="tours.html">Tours</a></li>
                                 <!--<li><a href="blog.html">Blog</a></li>-->
                                 <li><a href="contact.html">Contact</a></li>
                                 <li><a href="../cdmx.html" target="_self">Esp</a></li>
