--- a/ng/index.html
+++ b/ng/index.html
@@ -233,6 +233,7 @@
                   </ul>
                 </li>
                 <li><a href="cdmx.html">Meet CDMX</a></li>
+                <li><a href="tours.html">Tours</a></li>
                 <!--<li><a href="blog.html">Blog</a></li>-->
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="../index.html" target="_self">Esp</a></li>
