--- a/ng/restaurant.html
+++ b/ng/restaurant.html
@@ -232,6 +232,7 @@
                   </ul>
                 </li>
                 <li><a href="cdmx.html">Meet CDMX</a></li>
+                <li><a href="tours.html">Tours</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="../restaurant.html" target="_self">Esp</a></li>
               </ul>
