--- a/ng/rooms.html
+++ b/ng/rooms.html
@@ -238,6 +238,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="cdmx.html">Meet CDMX</a></li>
+                                <li><a href="tours.html">Tours</a></li>
                                 <!--<li><a href="blog.html">Blog</a></li>-->
                                 <li><a href="contact.html">Contact</a></li>
                                 <li><a href="../rooms.html" target="_self">Esp</a></li>
