--- a/ng/roomservice.html
+++ b/ng/roomservice.html
@@ -223,6 +223,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="cdmx.html">Meet CDMX</a></li>
+                                <li><a href="tours.html">Tours</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                                 <li><a href="../roomservice.html" target="_self">Esp</a></li>
                             </ul>
