Actualizando menú Esp Version

--- a/cafe.html
+++ b/cafe.html
@@ -228,6 +228,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="cdmx.html">Conoce la CDMX</a></li>
+                                <li><a href="tours.html">Tours</a></li>
                                 <!--<li><a href="blog.html">Blog</a></li>-->
                                 <li><a href="contact.html">Contacto</a></li>
                                 <!--<li><a href="https://hotelespuntomx-com.translate.goog/cafe.html?_x_tr_sl=es&_x_tr_tl=en&_x_tr_hl=es&_x_tr_pto=wapp" target="_self"><i class="fa-solid fa-flag-usa"></i>Eng</a></li>-->
