--- a/cdmx.html
+++ b/cdmx.html
@@ -234,6 +234,7 @@
                                         </ul>
                                     </li>
                                     <li><a href="cdmx.html" class="active">Conoce la CDMX</a></li>
+                                    <li><a href="tours.html">Tours</a></li>
                                     <!--<li><a href="blog.html">Blog</a></li>-->
                                     <li><a href="contact.html">Contacto</a></li>
                                     <li><a href="./ng/cdmx.html" target="_self"><i class="fa-solid fa-flag-usa"></i>Eng</a></li>
