--- a/contact.html
+++ b/contact.html
@@ -227,6 +227,7 @@
                   </ul>
                 </li>
                 <li><a href="cdmx.html">Conoce la CDMX</a></li>
+                <li><a href="tours.html">Tours</a></li>
                 <!--<li><a href="blog.html">Blog</a></li>-->
                 <li><a href="#" class="active">Contacto</a></li>
                 <li><a href="./ng/contact.html" target="_self"><i class="fa-solid fa-flag-usa"></i>Eng</a></li>
