--- a/restaurant.html
+++ b/restaurant.html
@@ -250,6 +250,7 @@
                   </ul>
                 </li>
                 <li><a href="cdmx.html">Conoce la CDMX</a></li>
+                <li><a href="tours.html">Tours</a></li>
                 <li><a href="contact.html">Contacto</a></li>
                 <li><a href="./ng/restaurant.html" target="_self"><i class="fa-solid fa-flag-usa"></i>Eng</a></li>
               </ul>
