--- a/rooms.html
+++ b/rooms.html
@@ -237,6 +237,7 @@
                                         </ul>
                                     </li>
                                     <li><a href="cdmx.html">Conoce la CDMX</a></li>
+                                    <li><a href="tours.html">Tours</a></li>
                                     <!--<li><a href="blog.html">Blog</a></li>-->
                                     <li><a href="contact.html">Contacto</a></li>
                                     <li><a href="./ng/rooms.html" target="_self"><i class="fa-solid fa-flag-usa"></i>Eng</a></li>
