--- a/services.html
+++ b/services.html
@@ -242,6 +242,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="cdmx.html">Conoce la CDMX</a></li>
+                                <li><a href="tours.html">Tours</a></li>
                                 <!--<li><a href="blog.html">Blog</a></li>-->
                                 <li><a href="contact.html">Contacto</a></li>
                                 <li><a href="./ng/services.html" target="_self"><i class="fa-solid fa-flag-usa"></i>Eng</a></li>
