Actualización menus.html

--- a/menus.html
+++ b/menus.html
@@ -129,8 +129,8 @@
                                             <img class="card-img-top" src="./assets/webp/CAFE_Y_RED_VELVET.jpeg" alt="Cafe MX - Menú">
                                             <div class="card-body">
                                                 <h5 class="card-title cursiveFont">Cafe MX</h5>
-                                                <a href="" class="btn btn-primary btn-luxe-primary" target="_blank" style="font-size: 1.1rem;">Ver Menú (Esp)<i class="ti-angle-right"></i></a>
-                                                <a href="" class="btn btn-primary btn-luxe-primary" target="_blank" style="font-size: 1.1rem;">Ver Menú (Eng)<i class="ti-angle-right"></i></a>
+                                                <a href="./files/carta-cafe-esp-qr.pdf" class="btn btn-primary btn-luxe-primary" target="_blank" style="font-size: 1.1rem;">Ver Menú (Esp)<i class="ti-angle-right"></i></a>
+                                                <a href="./files/carta-cafe-ingles-qr.pdf" class="btn btn-primary btn-luxe-primary" target="_blank" style="font-size: 1.1rem;">Ver Menú (Eng)<i class="ti-angle-right"></i></a>
                                             </div>
                                         </div>
                                     </div>
