Trabajando en action_tours

--- a/tours.html
+++ b/tours.html
@@ -499,7 +499,7 @@
             from_request: request,
             to_name: 'HotelPuntoMx'
         };
-        emailjs.send('service_2cox8vo', 'template_e4xoh8b', templateParams)
+        emailjs.send('service_2cox8vo', 'template_n8t23g5', templateParams)
             .then(function(response) {
                 console.log('SUCCESS!', response.status, response.text);
                 document.getElementById("from_name").value = " ";
