Trabajando en action_tours

--- a/tours.html
+++ b/tours.html
@@ -473,6 +473,7 @@
 <script src="js/selectFx.js"></script>
 <script src="js/jquery.flexslider-min.js"></script>
 <script src="js/custom.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 <script>
     const date_t = document.getElementById('date_tour');
     date_t.min = new Date().toISOString().split("T")[0];
