Trabajando en action_tours

--- a/tours.html
+++ b/tours.html
@@ -49,6 +49,12 @@
                 height: 65vh!important;
             }
         }
+        input[type=number]::-webkit-inner-spin-button,
+        input[type=number]::-webkit-outer-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+        input[type=number] { -moz-appearance:textfield; }
     </style>
 </head>
 <body class="mybody">
