Trabajando en action_tours

--- a/tours.html
+++ b/tours.html
@@ -379,7 +379,14 @@
                             </li>
                             <li>
                                 <label for="tour_tour" class="cursiveFont">Recorrido de su preferencia:</label>
-                                <input type="text" name="tour" class="borde_r" placeholder="Nombre" id="tour_tour" required />
+                                <!--<input type="text" name="tour" class="borde_r" placeholder="Nombre" id="tour_tour" required />-->
+                                <select name="tour" class="borde_r" id="tour_tour" required>
+                                    <option value="value1">Piramides de Teotihuacán</option>
+                                    <option value="value2" selected>Teotihuacán aéreo</option>
+                                    <option value="value3">Teotihuacán Express</option>
+                                    <option value="value3">Value 3</option>
+                                    <option value="value3">Value 3</option>
+                                </select>
                                 <!--<span class="fa valid-icon"></span>-->
                             </li>
                             <li>
