Trabajando en action_tours

--- a/tours.html
+++ b/tours.html
@@ -273,7 +273,7 @@
                             <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
                             <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
                             <li data-target="#carouselExampleIndicators" data-slide-to="9"></li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="10"></li>
+                            <!--<li data-target="#carouselExampleIndicators" data-slide-to="10"></li>-->
                         </ol>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -380,12 +380,17 @@
                             <li>
                                 <label for="tour_tour" class="cursiveFont">Recorrido de su preferencia:</label>
                                 <!--<input type="text" name="tour" class="borde_r" placeholder="Nombre" id="tour_tour" required />-->
-                                <select name="tour" class="borde_r" id="tour_tour" required>
-                                    <option value="value1">Piramides de Teotihuacán</option>
-                                    <option value="value2" selected>Teotihuacán aéreo</option>
-                                    <option value="value3">Teotihuacán Express</option>
-                                    <option value="value3">Value 3</option>
-                                    <option value="value3">Value 3</option>
+                                <select name="tour" class="borde_r" class="borde_r" id="tour_tour" required>
+                                    <option value="Piramides de Teotihuacán">Piramides de Teotihuacán</option>
+                                    <option value="Teotihuacán aéreo">Teotihuacán aéreo</option>
+                                    <option value="Teotihuacán Express">Teotihuacán Express</option>
+                                    <option value="Xochimilco-Coyoacán">Xochimilco-Coyoacán</option>
+                                    <option value="Cholula-Puebla">Cholula-Puebla</option>
+                                    <option value="Taxco-Cuernavaca">Taxco-Cuernavaca</option>
+                                    <option value="Garibaldi Nocturno">Garibaldi Nocturno</option>
+                                    <option value="Tour Luchas">Tour Luchas</option>
+                                    <option value="Piramides y Safari">Piramides y Safari</option>
+                                    <option value="Grutas de Tolantongo">Grutas de Tolantongo</option>
                                 </select>
                                 <!--<span class="fa valid-icon"></span>-->
                             </li>
@@ -396,7 +401,7 @@
                             </li>
                             <li>
                                 <label for="request_tour" class="cursiveFont">Peticiones Especiales:</label>
-                                <textarea name="request" cols="40" rows="6" required id="request_tour"></textarea>
+                                <textarea name="request" cols="30" rows="3" required id="request_tour"></textarea>
                                 <!--<span class="fa valid-icon"></span>-->
                                 <br>
                                 <span id="response-mail" class="fontHover cursiveFont"> </span>
