Trabajando en action_tours

--- a/tours.html
+++ b/tours.html
@@ -378,7 +378,7 @@
                                 <!--<span class="required_notification">* Denotes Required Field</span>-->
                             </li>
                             <li>
-                                <label for="tour_tour" class="cursiveFont">Recorrido de su preferencia:</label>
+                                <label for="tour_tour" class="cursiveFont">Recorrido:</label>
                                 <!--<input type="text" name="tour" class="borde_r" placeholder="Nombre" id="tour_tour" required />-->
                                 <select name="tour" class="borde_r" class="borde_r" id="tour_tour" required>
                                     <option value="Piramides de Teotihuacán">Piramides de Teotihuacán</option>
