Trabajando en action_tours

--- a/tours.html
+++ b/tours.html
@@ -380,7 +380,7 @@
                             <li>
                                 <label for="tour_tour" class="cursiveFont">Recorrido:</label>
                                 <!--<input type="text" name="tour" class="borde_r" placeholder="Nombre" id="tour_tour" required />-->
-                                <select name="tour" class="borde_r" class="borde_r" id="tour_tour" required>
+                                <select name="tour" class="borde_r" id="tour_tour" required>
                                     <option value="Piramides de Teotihuacán">Piramides de Teotihuacán</option>
                                     <option value="Teotihuacán aéreo">Teotihuacán aéreo</option>
                                     <option value="Teotihuacán Express">Teotihuacán Express</option>
