--- a/tours.html
+++ b/tours.html
@@ -360,7 +360,7 @@
                                 <!--<span id="response-mail" class="fontHover cursiveFont"> </span>-->
                             </li>
                             <li>
-                                <label for="people_tour" class="cursiveFont"># de Personas:</label>
+                                <label for="people_tour" class="cursiveFont" style="font-size: 1.4rem;">Número de personas:</label>
                                 <input type="number" name="people" class="borde_r" placeholder="# de Personas" id="people_tour" step="1" required />
                                 <!--<span class="fa valid-icon"></span>-->
                             </li>
