Trabajando en action_tours

--- a/tours.html
+++ b/tours.html
@@ -353,14 +353,14 @@
                                 <span class="form_hint">Formato "email@domino.com"</span>
                             </li>
                             <li>
-                                <label for="date_tour" class="cursiveFont">Fecha de llegada:</label>
+                                <label for="date_tour" class="cursiveFont" style="font-size: 1.5rem;">Fecha de llegada:</label>
                                 <input type="date" name="date" placeholder="dd/mm/aaaa" id="date_tour" required />
                                 <!--<span class="fa valid-icon"></span>-->
                                 <br>
                                 <!--<span id="response-mail" class="fontHover cursiveFont"> </span>-->
                             </li>
                             <li>
-                                <label for="people_tour" class="cursiveFont" style="font-size: 1.4rem;">Número de personas:</label>
+                                <label for="people_tour" class="cursiveFont" style="font-size: 1.5rem;">Número de personas:</label>
                                 <input type="number" name="people" class="borde_r" placeholder="# de Personas" id="people_tour" step="1" required />
                                 <!--<span class="fa valid-icon"></span>-->
                             </li>
