Trabajando en action_tours

--- a/tours.html
+++ b/tours.html
@@ -401,19 +401,45 @@
                             </li>
                             <li>
                                 <label for="request_tour" class="cursiveFont">Peticiones Especiales:</label>
-                                <textarea name="request" cols="30" rows="3" required id="request_tour"></textarea>
+                                <textarea name="request" cols="30" rows="4" required id="request_tour"></textarea>
                                 <!--<span class="fa valid-icon"></span>-->
                                 <br>
                                 <span id="response-mail" class="fontHover cursiveFont"> </span>
                             </li>
                             <li>
-                                <input class="btn btn-primary btn-luxe-primary" type="button" value="Enviar" onclick="enviarTours()" style="height: 40px; width: 90px; box-shadow: none; margin: auto;"/>
+                                <input class="btn btn-primary btn-luxe-primary" type="button" value="Enviar" onclick="enviarTours()" style="height: 40px; width: 90px; font-size: 1.3rem; text-align: center; padding: 0;  box-shadow: none; margin: auto;"/>
                             </li>
                         </ul>
                     </form>
                 </div>
+                <hr>
+                <div class="col-12">
+                    <div class="row justify-content-md-center text-center">
+                        <p>Nota: Al momento de reservar algún tour se le solicitará una tarjeta de crédito como garantía</p>
+                    </div>
+                </div>
             </div>
         </div>
+        <hr>
+        <div class="container">
+            <!--<div class="row">
+                5520682719recepcion@hotelespuntomx.com
+                <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" target="_blank" class="">Reserva aquí</a>
+                <a href="https://api.whatsapp.com/send/?phone=5520682719&text&app_absent=0" target="_blank" class=""><i class="fa-brands fa-whatsapp"></i></a>
+            </div>-->
+            <div class="row justify-content-md-center">
+                <h1>Contacto Tours</h1>
+            </div>
+            <div class="row justify-content-md-center">
+                <div class="col-lg-3 col-md-3 col-sm-12">
+                    <a href="mailto:recepcion@hotelespuntomx.com?Subject=Solicitud%20de%20tour%20HotelPuntoMX%20" type="button" class="btn btn-primary" style="font-size: 2rem; color:#fff;">Enviar Email</a>
+                </div>
+                <div class="col-lg-3 col-md-3 col-sm-12" style="text-align: center; align-items: center; background-color: #25D366; color: #fff;">
+                    <a href="https://api.whatsapp.com/send/?phone=525520682719&text&app_absent=0" target="_blank" class="" style="color: #FFF; align-content: center; text-align: center;"><i class="fa-brands fa-whatsapp fa-4x"></i></a>
+                </div>
+            </div>
+        </div>
+        <hr>
         <!------------------------------------------->
         <!------------------------------------------->
         <footer id="footer" class="fh5co-bg-color">
